--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "gsap": "^3.11.3",
-    "lil-gui": "^0.17.0",
     "next": "13.0.3",
     "normalize-wheel": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "three": "^0.146.0",
+    "tweakpane": "^3.1.1",
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@tweakpane/core": "^1.1.1",
     "@types/normalize-wheel": "^1.0.1",
     "@types/three": "^0.146.0"
   }
