--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "normalize-wheel": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stats.ts": "^1.1.0",
     "three": "^0.146.0",
     "tweakpane": "^3.1.1",
     "typescript": "4.8.4"
