feat: Added support for glsl files

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react-dom": "18.0.8",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "glslify-loader": "^2.0.0",
     "gsap": "^3.11.3",
     "next": "13.0.3",
     "normalize-wheel": "^1.0.1",
+    "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "stats.ts": "^1.1.0",
