--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "stats.ts": "^1.1.0",
     "three": "^0.146.0",
     "tweakpane": "^3.1.1",
